# quantigen-ai

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  launch_quantigen.ps1  launch_quantigen.sh  launch_statmind.ps1  launch_statmind.sh  pyproject.toml
backend/: __init__.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/endpoints/: __init__.py  analysis.py  chat.py  datasets.py  export.py  methods.py  power.py  registry.py
backend/app/core/: __init__.py  config.py  exceptions.py
backend/app/models/: __init__.py  analysis.py  assumptions.py  dataset.py  variables.py
backend/app/services/: __init__.py
backend/app/services/analysis/: __init__.py  engine.py  reporting.py
backend/app/services/assumptions/: __init__.py  checker.py  explanations.py  rules.py  tests.py
backend/app/services/chat/: __init__.py  intent.py  (+1 more)
backend/tests/: __init__.py  test_api.py  test_assumptions.py  test_methods.py  test_modular_engines.py  test_phase2_assumptions.py  test_phase2_methods.py  test_phase2_parser.py  test_phase3_export.py  test_phase3_plotter.py  test_phase3_reporting.py  test_pipeline.py  test_validator.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/types/: statmind.ts
r_templates/: anova.R.j2  chi_square.R.j2  correlation.R.j2  descriptive.R.j2  kruskal.R.j2  logistic_regression.R.j2  mann_whitney.R.j2  multiple_regression.R.j2  regression.R.j2  ttest.R.j2
(+65 files in other folders)
