[project]
name = "statmind-ai"
version = "0.1.0"
description = "No-Code Statistical Analysis Platform with Assumption-First Engine"
authors = [
    { name = "StatMind AI Team", email = "info@statmind.ai" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "statsmodels>=0.14.1",
    "scikit-learn>=1.4.0",
    "plotly>=5.19.0",
    "jinja2>=3.1.3",
    "openai>=1.14.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "kaleido>=1.3.0",
    "openpyxl>=3.1.0",
    "fpdf2>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "black>=24.2.0",
    "ruff>=0.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
